--- a/spa_python/spa_app/templates/spa_app/table.html
+++ b/spa_python/spa_app/templates/spa_app/table.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <form method="get" align="center" id="form">
-    {% csrf_token %}
+    {% comment %} {% csrf_token %} {% endcomment %}
     {{ table_form }}
     <input type = "submit" value = "Submit">
 </form>
