--- a/spa_python/spa_app/templates/spa_app/table.html
+++ b/spa_python/spa_app/templates/spa_app/table.html
@@ -25,8 +25,11 @@
         <td>{{ i.distance }}</td>
     </tr>
     {% endfor %}
+
 </table>
 
 
-
+<div id="err_div">
+    <p id="err_p"></p>
+</div>
 {% endblock content %}
